# tts_webui_extension.audiocraft

./: README.md  pyproject.toml  setup.py
extension_audiocraft/: __init__.py  main.py
extension_audiocraft/magnet/: __init__.py  magnet_tab.py
extension_audiocraft/musicgen/: musicgen_tab.py
tts_webui_extension/audiocraft/: main.py
tts_webui_extension/audiocraft/musicgen/: __init__.py  musicgen_tab.py
